PELOTON-1028 - [WEB-UI] initial Spark integration to Ambari, status\configuration\metrics are not implemented yet.

--- a/ambari-web/app/templates/main/service/info/summary.hbs
+++ b/ambari-web/app/templates/main/service/info/summary.hbs
@@ -88,6 +88,9 @@
         {{#if view.serviceStatus.flume}}
           {{view App.MainDashboardServiceFlumeView showOnlyRows=true serviceBinding="view.service"}}
         {{/if}}
+        {{#if view.serviceStatus.spark}}
+          {{view App.MainDashboardServiceSparkView showOnlyRows=true serviceBinding="view.service"}}
+        {{/if}}
       </tbody>
     </table>
     {{!view view.moreStatsView}}
