http://issues.nfractals.com:8080/browse/PELOTON-1028 [web-ui] hosts are listed for Server and Workers

--- a/ambari-web/app/templates/main/dashboard/service/spark.hbs
+++ b/ambari-web/app/templates/main/dashboard/service/spark.hbs
@@ -49,7 +49,7 @@
             {{view.liveWorkerNodes.length}}/{{view.service.workerNodes.length}} 
           </span> {{t services.service.summary.SparkWorkersLIVE}}
           <div class="summary-view-host">
-            <a href="#" {{action filterHosts view.regionServerComponent}}>
+            <a href="#" {{action filterHosts view.sparkWorkerComponent}}>
             {{view.workerNodesText}}</a>
           </div>
          </td>
