http://issues.nfractals.com:8080/browse/PELOTON-1028 [agent] Spark puppet configuration updated.

--- a/ambari-agent/src/main/puppet/modules/hdp-nagios/templates/hadoop-servicegroups.cfg.erb
+++ b/ambari-agent/src/main/puppet/modules/hdp-nagios/templates/hadoop-servicegroups.cfg.erb
@@ -31,6 +31,7 @@ define servicegroup {
   servicegroup_name  HBASE
   alias  HBASE Checks
 }
+<% end -%>
 <%if scope.function_hdp_nagios_members_exist('spark-server') ||
   scope.function_hdp_nagios_members_exist('spark-workers') -%>
 define servicegroup {
